--- a/itw2023_233040054/latihan/latihan5/css/myweb.css
+++ b/itw2023_233040054/latihan/latihan5/css/myweb.css
@@ -36,6 +36,10 @@ body{
     background-color: black;
     color: white;
 }
+
+.instagram:hover{
+    color: #fff;
+}
 .judul{
     font-weight: bold;
     font-size: 40px;
@@ -124,7 +128,7 @@ body{
 
 .overlay .close{
     position: absolute;
-    right: 545px;
+    right: 500px;
     text-decoration: none;
     color: white;
 
@@ -134,6 +138,8 @@ body{
 .overlay:target .close{
     animation: outFade 1s;
 }
+
+
 @keyframes zoomFade{
     0%{
         transform: scale(0);
@@ -276,7 +282,7 @@ h2{
 
 .overlay2 .close{
     position: absolute;
-    right: 545px;
+    right: 450px;
     text-decoration: none;
     color: white;
 
@@ -288,3 +294,91 @@ h2{
 }
 
 
+.overlay2:target .next,
+.overlay2:target .prev{
+    animation: fadeAjah .5s .5s forwards;
+}
+
+/*animasi next prev  */
+@keyframes fadeAjah{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+
+.next, .prev{
+    background-image: url(../galery/img/next.png);
+    width: 57px;
+    height: 57px;
+    position: absolute;
+    text-indent: -99999999px;
+    top: 45%;
+    margin-left: 50px;
+    opacity: 0;
+}
+
+.prev{
+    background-image: url(../galery/img/previous.png);
+    margin-left: -100px;
+}
+
+/* gallery */
+
+.gallery0{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    max-width: 600px;
+    border: 1px solid;
+    padding: 25px;
+    background-color: #d9d8d8;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 0 auto;
+    border-radius: 10px;
+    box-shadow: 0 0;
+}
+
+.image-container{
+    flex: 1 1 calc(33.333% - 16px);
+    box-sizing: border-box;
+    position: relative;
+}
+
+.image-container img{
+    width: 100%;
+    display: block;
+    border-radius: 8px;
+    transform: transform 0.3s ease;
+}
+
+.image-container img:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+.image-container p{
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    background-color: rgba(0,0,0,.6);
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+}
+/* footer */
+
+.footer {
+    background-color: #333333;
+    padding: 10px;
+  }
+  
+  .footer .copy{
+    color: #eaeaea;
+    text-align: center;
+    font-size: 12px;
+  }
